--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+#supabase
+supabase/.temp
+supabase/.supabase/
+supabase/.supabase_config.json
+supabase/functions/**/node_modules/
+supabase/config.toml
