--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@supabase/supabase-js": "^2.86.0",
 		"chart.js": "^4.5.1",
 		"luxon": "^3.7.2",
+		"stripe": "^20.0.0",
 		"svelte-chartjs": "^3.1.5"
 	}
 }
