--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
+		"@types/d3": "^7.4.3",
 		"@types/luxon": "^3.7.1",
 		"@types/node": "^22",
 		"@vitest/browser-playwright": "^4.0.10",
@@ -53,6 +54,7 @@
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.86.0",
 		"chart.js": "^4.5.1",
+		"d3": "^7.9.0",
 		"luxon": "^3.7.2",
 		"stripe": "^20.0.0",
 		"svelte-chartjs": "^3.1.5"
